tests/syntax_tests/data/parsing/errors/expressions/oldDataLastPipe.res
// Old data-last pipe
let x = f => f |> String.length

